Closed
Bug 213541
Opened 23 years ago
Closed 22 years ago
Assumes Darwin = PPC
Categories
(SeaMonkey :: Build Config, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: waldmire, Assigned: leaf)
Details
Attachments
(2 files, 1 obsolete file)
|
1.12 KB,
patch
|
bryner
:
review+
asa
:
approval1.5b+
|
Details | Diff | Splinter Review |
|
737 bytes,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4b) Gecko/20030516 Mozilla Firebird/0.6
Build Identifier:
When trying to build mozilla on Darwin/x86 the build stops because there is code
that associates Darwin with a powerpc processor.
Reproducible: Always
Steps to Reproduce:
More information is required. Which code is assuming ppc? Note that building
against the mac or cocoa toolkits isn't supported for non-ppc builds. Afaik,
you can only build against the x11 toolkits.
Marking invalid for lack of additional requested information.
Status: UNCONFIRMED → RESOLVED
Closed: 23 years ago
Resolution: --- → INVALID
| Reporter | ||
Comment 3•23 years ago
|
||
from the file:
../mozilla/xpcom/reflect/xptcall/src/md/unix/Makefile
**********************************************
ifeq ($(OS_ARCH),Darwin)
ASFLAGS += -x assembler-with-cpp # assumes $(AS) == $(CC)
ifdef HAVE_GCC3_ABI
ASFLAGS += -DHAVE_GCC3_ABI
endif
CPPSRCS := xptcinvoke_ppc_rhapsody.cpp xptcstubs_ppc_rhapsody.cpp
ASFILES := xptcinvoke_asm_ppc_rhapsody.s xptcstubs_asm_ppc_darwin.s
endif
**********************************************
Status: RESOLVED → UNCONFIRMED
Resolution: INVALID → ---
Make darwin/x86 build using the generic unixish_x86 sources and put a cpu test
around the ppc case.
Attachment #129769 -
Flags: review?(bryner)
Updated•23 years ago
|
Attachment #129769 -
Flags: review?(bryner) → review+
Comment on attachment 129769 [details] [diff] [review]
v1.0
xptcall makefile changes to properly detect darwin/x86. Low risk.
Attachment #129769 -
Flags: approval1.5b?
Comment 6•23 years ago
|
||
Comment on attachment 129769 [details] [diff] [review]
v1.0
a=asa (on behalf of drivers) for checkin to 1.5beta
Attachment #129769 -
Flags: approval1.5b? → approval1.5b+
The patch has been checked in. Shall we wait to see what else turns up?
| Reporter | ||
Comment 8•22 years ago
|
||
The patch causes the following build error:
c++ -o xptcall.o -c -DOSTYPE=\"Darwin6.6\" -DOSARCH=\"Darwin\"
-DEXPORT_XPTC_API -D_IMPL_NS_COM -D_IMPL_NS_BASE
-I../../../../dist/include/xpcom -I../../../../dist/include
-I/Users/waldmire/mozilla/dist/include/nspr -I/usr/X11R6/include -fPIC
-I/usr/X11R6/include -fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith
-Wcast-align -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-long-long
-fpascal-strings -no-cpp-precomp -fno-common -fshort-wchar -pipe -DDEBUG
-D_DEBUG -DDEBUG_waldmire -DTRACING -g -I/usr/X11R6/include
-DMOZILLA_CLIENT -include ../../../../mozilla-config.h -Wp,-MD,.deps/xptcall.pp
xptcall.cpp
rm -f libxptcall.a
ar cr libxptcall.a xptcall.o
ranlib libxptcall.a
../../../../config/nsinstall -L /Users/waldmire/mozilla/xpcom/reflect/xptcall/src -m 644
libxptcall.a ../../../../dist/lib
xptcinvoke_unixish_x86.cpp
c++ -o xptcinvoke_unixish_x86.o -c -DOSTYPE=\"Darwin6.6\"
-DOSARCH=\"Darwin\" -DEXPORT_XPTC_API -I../../../../../../dist/include/xpcom
-I../../../../../../dist/include -I/Users/waldmire/mozilla/dist/include/nspr -I./../..
-I/usr/X11R6/include -fPIC -I/usr/X11R6/include -fno-rtti -fno-exceptions -Wall
-Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth
-Wno-ctor-dtor-privacy -Wno-long-long -fpascal-strings -no-cpp-precomp
-fno-common -fshort-wchar -pipe -DDEBUG -D_DEBUG -DDEBUG_waldmire
-DTRACING -g -I/usr/X11R6/include -DMOZILLA_CLIENT -include
../../../../../../mozilla-config.h -Wp,-MD,.deps/xptcinvoke_unixish_x86.pp
xptcinvoke_unixish_x86.cpp
In file included from xptcinvoke_unixish_x86.cpp:41:
xptc_platforms_unixish_x86.h:147:2: #error "need a platform define if using unixish
x86 code"
xptc_platforms_unixish_x86.h:153:2: #error "need to define 'this' adjust scheme"
make[7]: *** [xptcinvoke_unixish_x86.o] Error 1
make[6]: *** [libs] Error 2
make[5]: *** [libs] Error 2
make[4]: *** [libs] Error 2
make[3]: *** [libs] Error 2
make[2]: *** [libs] Error 2
make[1]: *** [tier_2] Error 2
make: *** [default] Error 2
Try this patch. You may have to change __APPLE__ to the appropriate define as
I'm not sure what are standard defines for gcc on Darwin/x86.
| Reporter | ||
Comment 10•22 years ago
|
||
the define should be as follows:
#elif defined (__APPLE__) && (__MACH__)
| Reporter | ||
Comment 11•22 years ago
|
||
I testing the patches, and the build gets past this point with both patches (the
second patch needs changed to reflect comment #10. I haven't yet determined the
problem with the next build error, but it is in a different directory.
| Reporter | ||
Comment 12•22 years ago
|
||
If we get the second patch committed to CVS (with the change noted in comment #10) then we
could probably mark this bug as fixed. I haven't gotten throught the entire build yet, but so far I
haven't found any other code that is assuming Darwin means PPC.
Mass reassign of Build/Config bugs to Leaf.
Assignee: mozbugs-build → leaf
Comment 14•22 years ago
|
||
Comment on attachment 130010 [details] [diff] [review]
v2.0
Leaf can you please review this together with the change proposed in comment 10
and check this in if applicable? Thanks.
Attachment #130010 -
Flags: review?(leaf)
Comment 15•22 years ago
|
||
There was an approval from drivers, but the bug is marked UNCONFIRMED? I don't
get that. Is it correct to assume that there is still a problem in 1.5 or later?
pi
Comment 16•22 years ago
|
||
Adjusting cls's patch to he stuff said in comment 10.
Updated•22 years ago
|
Attachment #130010 -
Attachment is obsolete: true
Comment 17•22 years ago
|
||
Comment on attachment 134979 [details] [diff] [review]
v2.1
Brian, can you please review and check this in if you like this patch?
Attachment #134979 -
Flags: review?(bryner)
Comment 19•22 years ago
|
||
Comment on attachment 130010 [details] [diff] [review]
v2.0
Clearing review-request of an obsolete patch
Attachment #130010 -
Flags: review?(leaf)
| Reporter | ||
Comment 20•22 years ago
|
||
I tested Mozilla 1.5 with patch v2.1 with the newest version of Darwin (7.0) and it builds with no
additional changes needed. Mozilla crashes immediately, but the viewer runs. I think it would be
safe to commit patch v2.1.
Updated•22 years ago
|
Attachment #134979 -
Flags: review?(bryner) → review+
Comment 21•22 years ago
|
||
Boris Zbarsky checked this in at 10.17 AM pacific time.
Status: NEW → RESOLVED
Closed: 23 years ago → 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•