Allow building on Darwin/x86.  Bug 213541, patch by cls and waldmire@illinoisalumni.org (Ed Waldmire), r=bryner