xpcom/reflect/xptcall/src/md/unix/xptc_platforms_unixish_x86.h
@@ -143,6 +143,9 @@
 #elif defined(__EMX__)
 #define THUNK_BASED_THIS_ADJUST
 
+#elif defined (__APPLE__) && (__MACH__)
+#define THUNK_BASED_THIS_ADJUST
+
 #else
 #error "need a platform define if using unixish x86 code"
 #endif
